--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,12 @@ public
 .env.development.local
 .env.test.local
 .env.production.local
+.envrc
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 package-lock.json
+
+#exceptions
+gtpm
