--- a/content/settings.json
+++ b/content/settings.json
@@ -12,7 +12,7 @@
       "github": "https://github.com/no-jochs",
       "medium": "https://read.johnochs.io",
       "linkedin": "https://www.linkedin.com/in/johnochs/",
-      "mastodon": "@john@sangha.social",
+      "mastodon": "https://mastodon.sangha.social/@john",
       "mail": "mailto:john@johnochs.io",
       "instagram": "@no_jochs"
     }
