--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
     "babel-plugin-styled-components": "^2.1.4",
+    "dotenv": "^16.3.1",
     "gatsby": "^5.0.1",
     "gatsby-omni-font-loader": "^2.0.2",
     "gatsby-plugin-react-helmet": "^6.11.0",
